@@ -1,3 +1,11 @@
+Mon Oct 10 23:20:11 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* filestack.c (File_GetLine): don't chop off last character of file
+	when it is not NL.
+	* decode.c (decode): Avoid early breakout when mnemonic hasn't been
+	fully matched.
+	* regression/tests_pass/macro.s: Enhance test.
+
 Mon Oct 10 00:55:46 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* code.c (codePosition): Add workaround.
